--- a/server/css/style.css
+++ b/server/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 #matrix-bg {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     top: 0;
     margin: 0;
     padding: 0;
@@ -17,13 +17,13 @@ body {
     text-align: center;
     font-weight: bold;
     font-style: oblique;
-    color: white;
+    color: rgb(255, 255, 255);
     position: relative
 }
 
 .container {
     padding: 0 25%;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 input, textarea {
@@ -32,7 +32,7 @@ input, textarea {
     margin: 5px 0 25px 0;
     display: inline-block;
     border: none;
-    background: white;
+    background: rgb(255, 255, 255);
     font-size: 20px;
     border-radius: 5px;
 }
@@ -51,10 +51,10 @@ button[type=submit] {
     text-decoration: none;
     outline: none;
     color: #fff;
-    background-color: #4CAF50;
+    background-color: rgb(76, 175, 80);
     border: none;
     border-radius: 15px;
-    box-shadow: 0 9px #999;
+    box-shadow: 0 9px rgb(153, 153, 153);
 }
 
 button[type=submit]:hover {
